--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,14 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+
+<h1>
+  Form
+</h1>
+
+<p>
+  {{form-element}}
+</p>
+
+<button onclick={{action 'changeForm'}}>
+  Click me.
+</button>
 
 {{outlet}}
