separate out the event form

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,10 +1,14 @@
 
+{{#link-to 'event-bus'}}
+  Event Bus
+{{/link-to}}
+  |
+{{#link-to 'actions-up-data-down'}}
+  Actions Up, Data Down
+{{/link-to}}
+
 <h1>
   Dynamic Form
 </h1>
-
-{{dynamic-form}}
-
-{{message-logger}}
 
 {{outlet}}
