--- a/app/templates/actions-up-data-down.hbs
+++ b/app/templates/actions-up-data-down.hbs
@@ -3,4 +3,6 @@
   This example uses the in built properties of ember components to bubble actions up and send data down.
 </p>
 
+{{actions-data-form}}
+
 {{outlet}}
